# uCode.cpp

./: .gitignore
.local/: DONOTREADME.md
Sprint00/: README.md
Sprint00/t00/: CMakeLists.txt  README.md  helloTamriel.cpp
Sprint00/t01/: CMakeLists.txt  README.md  printDialog.cpp  printDialog.h
Sprint00/t02/: CMakeLists.txt  README.md  walletManager.cpp  walletManager.h
Sprint00/t03/: CMakeLists.txt  README.md  castSpells.cpp  castSpells.h
Sprint00/t04/: CMakeLists.txt  README.md  referenceOrPointer.cpp  referenceOrPointer.h
Sprint00/t05/: CMakeLists.txt  README.md  main.cpp
Sprint00/t06/: CMakeLists.txt  README.md  main.cpp  meadSong.cpp  meadSong.h
Sprint00/t07/: CMakeLists.txt  README.md  main.cpp
Sprint00/t07/src/: CMakeLists.txt  inventory.cpp  inventory.h
Sprint01/t00/: CMakeLists.txt  README.md  main.cpp
Sprint01/t00/src/: CMakeLists.txt  lib.h  sort_args.cpp
Sprint01/t01/: CMakeLists.txt  README.md  main.cpp
Sprint01/t01/src/: CMakeLists.txt  lib.h  seek_and_print.cpp
Sprint01/t02/: CMakeLists.txt  README.md  main.cpp
Sprint01/t02/src/: CMakeLists.txt  find_town.cpp  lib.h  parse_line.cpp  seek_and_print.cpp
Sprint01/t03/: CMakeLists.txt  README.md  main.cpp
Sprint01/t03/src/: CMakeLists.txt  create_rabbit.cpp  evolve.cpp  find_town.cpp  init_ranch.cpp  lib.h
Sprint01/t04/: CMakeLists.txt  README.md  file.txt  main.cpp
Sprint01/t04/src/: CMakeLists.txt  check_ending.cpp  lib.h
Sprint01/t05/: CMakeLists.txt  README.md  main.cpp  names.txt
Sprint01/t05/src/: CMakeLists.txt  lib.h  write_to_file.cpp
Sprint02/t00/: CMakeLists.txt  README.md  main.cpp  test.txt
Sprint02/t00/src/: CMakeLists.txt  fill_set.cpp  is_word.cpp  is_word.h  write_to_file.cpp  write_to_file.h
Sprint02/t01/: CMakeLists.txt  README.md  main.cpp
Sprint02/t01/src/: CMakeLists.txt  fill_set.cpp
Sprint02/t02/: CMakeLists.txt  README.md  main.cpp
Sprint02/t02/src/: CMakeLists.txt  add.cpp  add.h  book_saver.h  cmd_handler.cpp  cmd_handler.h  fill_set.h  is_word.cpp  list.cpp  list.h  read.cpp  read.h  remove.cpp  remove.h  write_to_file.cpp  write_to_file.h
Sprint02/t03/: CMakeLists.txt  README.md  main.cpp  test.txt
Sprint02/t03/src/: CMakeLists.txt  parse_books.cpp  parse_books.h  print_library.cpp  print_library.h  tes_library.h
Sprint03/t00/: CMakeLists.txt  README.md  main.cpp  templateAddition.h
Sprint03/t01/: CMakeLists.txt  README.md  main.cpp  outputAny.h
Sprint03/t02/: CMakeLists.txt  README.md  main.cpp  sumOfArguments.h
Sprint03/t03/: CMakeLists.txt  README.md  main.cpp  sumFileData.h
Sprint03/t04/: CMakeLists.txt  README.md  main.cpp  outputContainer.h
Sprint03/t05/: CMakeLists.txt  README.md  main.cpp  squareValue.h
Sprint03/t06/: CMakeLists.txt  README.md  isPalindrome.h  main.cpp
Sprint03/t07/: CMakeLists.txt  README.md  main.cpp  sortValues.h
Sprint04/t00/: CMakeLists.txt  README.md  main.cpp
Sprint04/t00/utils/: CMakeLists.txt  algorithmUtils.h
Sprint04/t01/: CMakeLists.txt
Sprint04/t01/app/: CMakeLists.txt  main.cpp
Sprint04/t01/app/src/: Axe.cpp  Axe.h  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h
Sprint04/t02/: CMakeLists.txt
Sprint04/t02/app/: CMakeLists.txt  main.cpp
Sprint04/t02/app/src/: CMakeLists.txt
Sprint04/t02/utils/: algorithmUtils.h
Sprint04/t03/: CMakeLists.txt  dwemerCalculator
Sprint04/t03/app/: CMakeLists.txt  main.cpp
Sprint04/t03/app/src/: CMakeLists.txt  Dragonborn.cpp  Dragonborn.h  calc.cpp  calc.h
Sprint04/t03/libsugar/: CMakeLists.txt  libsugar.h
Sprint04/t03/utils/: CMakeLists.txt
Sprint04/t04/app/: main.cpp
Sprint04/t04/app/src/: Dragonborn.cpp
Sprint05/t00/: draugr
Sprint05/t00/app/: main.cpp
Sprint05/t00/app/src/: CMakeLists.txt  Draugr.cpp  Draugr.h
Sprint05/t01/: draugr
Sprint05/t01/app/: main.cpp
Sprint05/t01/app/src/: Draugr.cpp  Draugr.h
Sprint05/t02/: CMakeLists.txt  draugr
Sprint05/t02/app/: main.cpp
Sprint05/t02/app/src/: Draugr.cpp  Draugr.h
Sprint05/t03/: draugr
Sprint05/t03/app/: CMakeLists.txt  main.cpp
Sprint05/t03/app/src/: Draugr.cpp  Draugr.h
Sprint05/t04/: CMakeLists.txt  imperialVsStormcloak
Sprint05/t04/app/: CMakeLists.txt  main.cpp
Sprint05/t04/app/src/: Axe.cpp  Axe.h  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  Soldier.cpp  Soldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h
Sprint05/t05/: CMakeLists.txt  werewolf
Sprint05/t05/app/: CMakeLists.txt  main.cpp
Sprint05/t05/app/src/: CMakeLists.txt  Creature.cpp  Creature.h  Human.h  Werewolf.cpp  Werewolf.h  Wolf.h
Sprint06/t00/: CMakeLists.txt  mightyWizard
Sprint06/t00/app/: CMakeLists.txt  main.cpp
Sprint06/t00/app/src/: CMakeLists.txt
Sprint06/t00/app/src/Food/: ApplePie.cpp  ApplePie.h  FoodItem.h  HoneyNut.cpp  HoneyNut.h  (+4 more)
Sprint07/t00/: CMakeLists.txt
Sprint07/t00/app/: CMakeLists.txt
Sprint07/t00/app/src/: CMakeLists.txt  Vector.h
Sprint07/t01/: CMakeLists.txt
Sprint07/t01/app/: CMakeLists.txt  main.cpp
Sprint07/t01/app/src/: BasicString.h  CBLString.h  CBLWString.h  CMakeLists.txt
Sprint09/t00/: CMakeLists.txt
Sprint09/t00/app/: CMakeLists.txt  main.cpp
Sprint09/t00/app/src/: Worker.h
Sprint09/t01/: CMakeLists.txt
Sprint09/t01/app/: CMakeLists.txt  main.cpp
Sprint09/t01/app/src/: CMakeLists.txt  MultithreadedClass.h  Worker.h
Sprint09/t02/: CMakeLists.txt
Sprint09/t02/app/: CMakeLists.txt  main.cpp
Sprint09/t02/app/src/: MultithreadedFileHandler.h  Worker.h
Sprint09/t03/: CMakeLists.txt
Sprint09/t03/app/: CMakeLists.txt  main.cpp
Sprint09/t03/app/src/: ClassWithAtomic.h  Worker.h
Sprint09/t04/: CMakeLists.txt
Sprint09/t04/app/: CMakeLists.txt  main.cpp
Sprint09/t04/app/src/: Worker.h
Sprint09/t05/: CMakeLists.txt
Sprint09/t05/app/: CMakeLists.txt  main.cpp
Sprint09/t05/app/src/: Log.cpp  Log.h  LoggerWorker.cpp  LoggerWorker.h  Worker.h
Sprint09/t06/: CMakeLists.txt
Sprint09/t06/app/: CMakeLists.txt  main.cpp
Sprint09/t06/app/src/: ThreadPool.cpp  ThreadPool.h
(+3 files in other folders)
